--- a/home.html
+++ b/home.html
@@ -30,7 +30,6 @@
 		<meta property="og:site_name" content="Retrato financiamento coletivo Brasil - Catarse e Chorus" />
 
     <body>
-<<<<<<< HEAD
 	    <div class="share">
 			<ul>
 				<li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
@@ -42,7 +41,158 @@
     	<div class="stamp"><a href="#/0">#rfcbr</a></div>
 
 	    <div class="slides et-wrapper">
-			
+			<!-- 26 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<img src="img/rede/imagem-rede-2.png" alt="">
+					<p>O círculo de influências</p>
+					<p>As 3 esferas de apoio e alcance de um projeto</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 27 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<img src="img/rede/imagem-rede-3.png" alt="">
+					<h3>1.Ignição de projetos</h3>
+					<p>É nesse círculo de pessoas que a magia se inicia. São os amigos e parentes, pessoas próximas, que desejam seu sucesso e estão dispostas a ajudar baseados no mais incrível dos motivos: o afeto. Respeitar esse círculo, trabalhando ele bem e de forma especial é um dos segredos do sucesso. São esses os apoiadores mais valiosos, responsáveis pela ignição de um projeto e pelo estímulo psicológico inicial em uma campanha. Sem eles, tudo fica mais difícil pois eles representam de 55 a 80% dos recursos que serão captados por um realizador.</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 28 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<img src="img/rede/imagem-rede-4.png" alt="">
+					<h3>2.Realização de projetos</h3>
+					<p>O segundo círculo é determinante. É composto por pessoas que receberão recomendações sobre um projeto a partir da rede de influências de seus conhecidos diretos e parentes. Carinhosamente apelidado de "amigos dos amigos", ele determinará se um projeto será realizado ou não, dado que cobre a lacuna de contribuições que o primeiro círculo não foi capaz de assegurar. O mais importante aqui é a comunicação sobre o projeto: Quanto mais distantes as pessoas estão de um acesso direto ao realizador, mais necessidade sentem de assegurar a credibilidade da iniciativa proposta. Comunique-se com vontade, e seja transparente sobre seus objetivos!</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 29 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<img src="img/rede/imagem-rede-5.png" alt="">
+					<h3>3.Interesse Público</h3>
+					<p>O terceiro e último círculo é o equivalente a "cair nas graças do povo". É quando um projeto ultrapassa o primeiro e segundo círculos por trabalhar temáticas que são de interesse público, que geram comoção ou por fazerem boas campanhas a ponto de expandirem a rede de influência do projeto. Para quem pensa em projetos de grande porte, esse círculo é necessário. No entanto, é extremamente difícil de ser atingido pois depende de uma série de fatores como bom discurso, exposição na mídia, credibilidade do realizador e boa comunicação dos objetivos do projeto.</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 30 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<h3>A presença do primeiro círculo nos projetos</h3>
+					<img src="img/rede/imagem-rede-6.png" alt="">
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 31 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<h2>O que falta para o mercado de financiamento coletivo caminhar para uma maior popularização?</h2>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 32 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<h3>Muitos dos participantes da pesquisa sugerem campanahs de publicidade para divulgar o modelo do financiamento coletivo como um todo. Será que não existem outros meios para se atingir o mesmo objetivo?</h3>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 33 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<h3 class="icon-star">Uma possibilidade: <span class="white-title">projetos populares</span></h3>
+					<p>O formato do uso de plataformas que operam sob lógicas de recomendação favorecem que projetos com apelo popular espalhem aos 4 ventos a novidade do financiamento coletivo e tragam mais apoiadores, que passam a circular na plataforma. Isso influencia no apoio a vários outros projetos.</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 34 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<h3 class="icon-companies">Outra possibilidade: <span class="white-title">empresas</span></h3>
+					<p>Uma maior presença de empresas no ecossistema do financiamento coletivo parece ser algo desejado por uma parcela relevante das pessoas que responderam a pesquisa. No entanto, fica clara uma indicação de que a expectativa é por engajamento, colaboração, e não apenas marketing.</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 35 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<h3 class="icon-government">Outra possibilidade: <span class="white-title">governos</span></h3>
+					<p><strong>83%</strong> se dizem contra a participação do governo no financiamento coletivo de qualquer maneira</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 36 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<h3 class="white-title">Respostas da Pesquisa</h3>
+					<p>Embora a grande maioria das pessoas tenha sido contra a participação do governo, várias possibilidades de participação interessantes surgiram.</p>
+					<div class="ballon network-ballon">
+						<p class="response">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd asdfgh tresasdoi</p>
+						<a href="">Ver outra resposta</a>
+					</div>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 37 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<h3>na sua opinião...</h3>
+					<p class="disqus-text">Como as grandes empresas podem participar e impulsionar o ecossistema do financiamento coletivo brasileiro?</p>
+					<div id="disqus_thread"></div>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+
 
 			<!-- 1 -->
 			<section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
@@ -653,6 +803,40 @@
 				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
 				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
 			</section>
+
+			<!--
+			BLOCO 3
+			-->
+			<!-- 25 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<img src="img/icone-rede.png" alt="">
+					<h3 class="white-title">Rede</h3>
+					<p>Como se configuram os círculos de influência em uma campanha de financiamento coletivo? Como um projeto atinge diferentes camadas de pessoas e de que maneira esse processo ocorre? Essas são algumas das perguntas respondidas nesse capítulo.</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!--
+			BLOCO 4
+			-->
+			<!-- 38 -->
+			<section class="et-page network">
+				<div class="v-center" style="margin-top: -310px">
+					<img src="img/icone-realizadores.png" alt="">
+					<h3>Realizadores</h3>
+					<p>Qual a idade típica de um realizador? Quais são as dificuldades que têm ao empreenderem uma campanha de financiamento coletivo? Conheça um pouco mais sobre os criadores de projetos que passaram pelo Catarse e veja dicas para a formatação de uma boa campanha.</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+		</div>
 
       <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
