--- a/home.html
+++ b/home.html
@@ -30,7 +30,6 @@
 		<meta property="og:site_name" content="Retrato financiamento coletivo Brasil - Catarse e Chorus" />
 
     <body>
-<<<<<<< HEAD
 	    <div class="share">
 			<ul>
 				<li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
@@ -42,7 +41,7 @@
     	<div class="stamp"><a href="#/0">#rfcbr</a></div>
 
 	    <div class="slides et-wrapper">
-			
+
 
 			<!-- 1 -->
 			<section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
@@ -442,7 +441,7 @@
 				<div class="v-center" style="margin-top: -320px">
 					<h3>na sua opinião...</h3>
 					<p class="disqus-text">O que você sugeriria que fizéssemos para expandir o financiamento coletivo no Brasil para mais pessoas?</p>
-					<div id="disqus_thread"></div>
+          <iframe width="770" height="365" border="0" src="//localhost:8080/disqus_1.html" class='disqus_iframe'></iframe>
 				</div>
 
 				<!-- navigation -->
@@ -646,7 +645,7 @@
 					<h3 class="white-title">na sua opinião...</h3>
 					<p class="disqus-text">Você se comprometeria a contribuir com 10 reais mensalmente se tivesse certeza de que todo mês um projeto de impacto social seria viabilizado?</p>
 
-					<div id="disqus_thread"></div>
+          <iframe width="770" height="365" border="0" src="//localhost:8080/disqus_2.html" class='disqus_iframe'></iframe>
 				</div>
 
 				<!-- navigation -->
@@ -654,17 +653,6 @@
 				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
 			</section>
 
-      <script type="text/javascript">
-/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-      var disqus_shortname = 'pesquisacatarse'; // required: replace example with your forum shortname
-
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function() {
-       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-       dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-       })();
-      </script>
 
     </div>
 
