--- a/home.html
+++ b/home.html
@@ -441,7 +441,7 @@
 				<div class="v-center" style="margin-top: -320px">
 					<h3>na sua opinião...</h3>
 					<p class="disqus-text">O que você sugeriria que fizéssemos para expandir o financiamento coletivo no Brasil para mais pessoas?</p>
-          <iframe width="770" height="365" border="0" src="//localhost:8080/disqus_1.html" class='disqus_iframe'></iframe>
+          <iframe width="770" height="365" border="0" src="//three-years-test.herokuapp.com/disqus_1.html" class='disqus_iframe'></iframe>
 				</div>
 
 				<!-- navigation -->
@@ -645,7 +645,7 @@
 					<h3 class="white-title">na sua opinião...</h3>
 					<p class="disqus-text">Você se comprometeria a contribuir com 10 reais mensalmente se tivesse certeza de que todo mês um projeto de impacto social seria viabilizado?</p>
 
-          <iframe width="770" height="365" border="0" src="//localhost:8080/disqus_2.html" class='disqus_iframe'></iframe>
+          <iframe width="770" height="365" border="0" src="//three-years-test.herokuapp.com/disqus_2.html" class='disqus_iframe'></iframe>
 				</div>
 
 				<!-- navigation -->
