--- a/home.html
+++ b/home.html
@@ -882,19 +882,386 @@
 			BLOCO 4
 			-->
 			<!-- 38 -->
-			<section class="et-page network">
-				<div class="v-center" style="margin-top: -310px">
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -221px">
 					<img src="img/icone-realizadores.png" alt="">
-					<h3>Realizadores</h3>
-					<p>Qual a idade típica de um realizador? Quais são as dificuldades que têm ao empreenderem uma campanha de financiamento coletivo? Conheça um pouco mais sobre os criadores de projetos que passaram pelo Catarse e veja dicas para a formatação de uma boa campanha.</p>
+					<h3 class="white-title">Realizadores</h3>
+					<p class="intro-text">Que idade tem os realizadores? Quais os principais aspectos de uma boa campanha de crowdfunding? Conheça um pouco mais sobre os criadores de projetos que se aventuraram no financiamento coletivo e veja dicas para a formatação de uma boa campanha.</p>
 				</div>
 
 				<!-- navigation -->
 				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
 				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
 			</section>
-		</div>
 
+			<!-- 39 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -203px">
+					<h3 class="icon-age">Que idade tem os realizadores do financiamento coletivo?</h3>
+
+					<ul class="age">
+						<li>
+							<div class="item-1"></div>
+							<p>Até 17 anos</p>
+							<span>1%</span>
+						</li>
+						<li>
+							<div class="item-2"></div>
+							<p>18 a 24 anos</p>
+							<span>17%</span>
+						</li>
+						<li>
+							<div class="item-3"></div>
+							<p>25 a 30 anos</p>
+							<span>37%</span>
+						</li>
+						<li>
+							<div class="item-4"></div>
+							<p>31 a 40 anos</p>
+							<span>28%</span>
+						</li>
+						<li>
+							<div class="item-5"></div>
+							<p>41 a 60 anos</p>
+							<span>15%</span>
+						</li>
+						<li>
+							<div class="item-6"></div>
+							<p>+ de 60 anos</p>
+							<span>2%</span>
+						</li>
+					</ul>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 40 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -262px">
+					<h3 class="icon-engine">O que fazem os realizadores?</h3>
+
+					<div class="creators-do">
+						<ul class="area">
+							<li>
+								<span>22%</span>
+								<p>artes</p>
+							</li>
+							<li>
+								<span>11%</span>
+								<p>produção cultural</p>
+							</li>
+							<li>
+								<span>9%</span>
+								<p>comunicação & jornalismo</p>
+							</li>
+							<li>
+								<span>7%</span>
+								<p>web & tecnologia</p>
+							</li>
+							<li>
+								<span>7%</span>
+								<p>mkt & publicidade</p>
+							</li>
+						</ul>
+
+						<ul class="job">
+							<li>
+								<div class="item-1"></div>
+								<p>Empreendedor / dono de empresa</p>
+								<span>32%</span>
+							</li>
+							<li>
+								<div class="item-2"></div>
+								<p>Freela / autônomo</p>
+								<span>20%</span>
+							</li>
+							<li>
+								<div class="item-3"></div>
+								<p>Estudante</p>
+								<span>13%</span>
+							</li>
+							<li>
+								<div class="item-4"></div>
+								<p>Funcionário de empresa privada</p>
+								<span>12%</span>
+							</li>
+							<li>
+								<div class="item-5"></div>
+								<p>Servidor Público</p>
+								<span>8%</span>
+							</li>
+							<li>
+								<div class="item-6"></div>
+								<p>3° setor</p>
+								<span>7%</span>
+							</li>
+							<li>
+								<div class="item-7"></div>
+								<p>Sem trabalho</p>
+								<span>7%</span>
+							</li>
+							<li>
+								<div class="item-8"></div>
+								<p>Outros</p>
+								<span>1%</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 41 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -239px">
+					<h3><span class="money-sign">$</span>Quanto arrecadaram os realizadores que responderam a pesquisa?</h3>
+					<img class="project-money" src="img/realizador/imagem-realiza-4.png" alt="">
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 42 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -192px">
+					<h3>Fases de uma campanha</h3>
+					<p class="creator-subtitle">os elementos que compõe uma campanha completa de financiamento coletivo</p>
+
+					<ul class="phases">
+						<li>
+							<h4>Pré-projeto</h4>
+							<ul class="phases-block">
+								<li>
+									<p>Planejamento de campanha</p>
+								</li>
+								<li>
+									<p>Valor</p>
+								</li>
+								<li>
+									<p>Transparência</p>
+								</li>
+								<li>
+									<p>Recompensas</p>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<h4>Durante</h4>
+							<ul class="phases-block">
+								<li>
+									<p>Campanha</p>
+								</li>
+								<li>
+									<p>Divulgação</p>
+								</li>
+								<li>
+									<p>Rede de amigos</p>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<h4>Pós</h4>
+							<ul class="phases-block">
+								<li>
+									<p>Entrega de recompensas</p>
+								</li>
+								<li>
+									<p>Execução do projeto</p>
+								</li>
+								<li>
+									<p>Comunicação com apoiadores</p>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 43 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -242px">
+					<h3>Porque o projeto foi bem sucedido?</h3>
+
+					<ul class="why-succeed">
+						<li class="item-1">
+							<p>Boa campanha de divulgação</p>
+							<span>22%</span>
+						</li>
+						<li class="item-2">
+							<p>Amigos e familiares apoiaram em peso</p>
+							<span>16%</span>
+						</li>
+						<li class="item-3">
+							<p>Projeto relevante para um grande número de pessoas</p>
+							<span>15%</span>
+						</li>
+						<li class="item-4">
+							<p>Boas recompensas</p>
+							<span>12%</span>
+						</li>
+						<li class="item-5">
+							<p>Investimento elevado de apoiadores</p>
+							<span>12%</span>
+						</li>
+						<li class="item-6">
+							<p>Projeto saiu na midia</p>
+							<span>11%</span>
+						</li>
+						<li class="item-7">
+							<p>Aúxilio da equipe da plataforma</p>
+							<span>9%</span>
+						</li>
+						<li class="item-8">
+							<p>Outros</p>
+							<span>3%</span>
+						</li>
+					</ul>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 44 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -289px">
+					<h3>Porque o projeto <i class="not">não</i> foi bem sucedido?</h3>
+
+					<ul class="why-not-succeed">
+						<li class="item-1">
+							<p>Campanha de divulgação insuficiente</p>
+							<span>22%</span>
+						</li>
+						<li class="item-2">
+							<p>Menos pessoas do que eu imaginava de fato apoiaram</p>
+							<span>19%</span>
+						</li>
+						<li class="item-3">
+							<p>Faltaram apoiadores para os maiores valores</p>
+							<span>9%</span>
+						</li>
+						<li class="item-4">
+							<p>O público alvo não conhecia financiamento coletivo</p>
+							<span>9%</span>
+						</li>
+						<li class="item-5">
+							<p>Valor pedido foi muito alto</p>
+							<span>9%</span>
+						</li>
+						<li class="item-6">
+							<p>Pessoas se sentiram inseguras de contribuir com o projeto</p>
+							<span>8%</span>
+						</li>
+						<li class="item-7">
+							<p>Recompensas não eram interessantes</p>
+							<span>6%</span>
+						</li>
+						<li class="item-8">
+							<p>Tema muito específico</p>
+							<span>5%</span>
+						</li>
+						<li class="item-9">
+							<p>Meus apoiadores não conseguiram realizar pagamento online</p>
+							<span>5%</span>
+						</li>
+						<li class="item-10">
+							<p>Outros</p>
+							<span>6%</span>
+						</li>
+					</ul>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 45 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -195px">
+					<h3>Fatores importantes de um projeto</h3>
+					<p class="creator-subtitle">Perguntamos aos apoiadores o que importava na hora de um apoio</p>
+
+					<div class="success-factors-box">
+						<p class="icon-transparency success-factors">Transparência</p>
+						<p class="icon-quality success-factors">Qualidade</p>
+						<p class="icon-reward success-factors">Recompensa</p>
+					</div>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 46 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -197px">
+					<h3 class="icon-transparency">Fatores importantes de um projeto: <span class="white-title">Transparência</span></h3>
+					<p class="success-data"><strong>72%</strong>dos entrevistados falaram que a transparência é fundamental para decidir apoiar um projeto</p>
+					<p class="success-data"><strong>64%</strong>Só apoiam projetos que apresentem o uso da verba de forma transparente</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 47 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -197px">
+					<h3 class="icon-quality">Fatores importantes de um projeto: <span class="white-title">Qualidade</span></h3>
+					<p class="success-data"><strong>66%</strong>dos apoiadores consideram a qualidade do projeto na hora de apoiar</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 48 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -197px">
+					<h3 class="icon-reward">Fatores importantes de um projeto: <span class="white-title">Recompensa</span></h3>
+					<p class="success-data"><strong>53%</strong>dizem que as recompensas são importantes para definir o valor do apoio</p>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 49 -->
+			<section class="et-page creator">
+				<div class="v-center" style="margin-top: -310px">
+					<h3 class="white-title">Respostas da Pesquisa</h3>
+					<p>Veja um montão de dicas rápidas diretamente de quem já fez um projeto de financiamento coletivo</p>
+					<div class="ballon creator-ballon">
+						<p class="response">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd asdfgh tresasdoi</p>
+						<a href="">Ver outra resposta</a>
+					</div>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+
+		</div>
     </div>
 
     <script src="lib/js/jquery-2.0.3.min.js"></script>
