--- a/home.html
+++ b/home.html
@@ -40,9 +40,11 @@
 
     	<div class="stamp"><a href="#/0">#rfcbr</a></div>
 
+    	<div class="menu"><a href="#/52"><img src="img/menu_indice.png"></a></div>
+
 	    <div class="slides et-wrapper">
 	    	<!-- 1 -->
-			<section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
+			<section class="et-page initial">
 				<div class="v-center" style="margin-top: -190px">
 					<h1 class="presentation-frame">
 						retrato<br>
@@ -59,7 +61,7 @@
 			</section>
 
 			<!-- 2 -->
-			<section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
+			<section class="et-page initial">
 				<div class="v-center" style="margin-top: -276px">
 					<p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
 					<p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
@@ -73,7 +75,7 @@
 			</section>
 
 			<!-- 3 -->
-			<section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
+			<section class="et-page initial">
 				<div class="v-center" style="margin-top: -274px">
 					<h2 class="dark-h2">O que queremos?</h2>
 					<div class="we-want">
@@ -104,7 +106,7 @@
 			</section>
 
 			<!-- 4 -->
-			<section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
+			<section class="et-page initial">
 				<div class="v-center" style="margin-top: -237px">
 					<h2 class="dark-h2">O que fizemos?</h2>
 					<div class="we-done">
@@ -130,7 +132,7 @@
 			</section>
 
 			<!-- 5 -->
-			<section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
+			<section class="et-page initial">
 				<div class="v-center" style="margin-top: -220px">
 					<h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
 					<p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
@@ -143,7 +145,7 @@
 			</section>
 
 			<!-- 6 -->
-			<section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
+			<section class="et-page initial">
 				<div class="v-center" style="margin-top: -190px">
 					<h2 class="dark-h2">Como lemos o resultado?</h2>
 					<p class="subtitle">Apresentamos nosso recorte da pesquisa nos 4 blocos abaixo. No botão central do rodapé você pode navegar livremente pela pesquisa, mas recomendamos a leitura linear na primeira visita.</p>
@@ -1258,6 +1260,200 @@
 				<!-- navigation -->
 				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
 				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 50 -->
+			<section class="et-page final">
+				<div class="v-center" style="margin-top: -310px">
+					<h3>Respostas da Pesquisa</h3>
+					<p>Veja um montão de dicas rápidas diretamente de quem já fez um projeto de financiamento coletivo</p>
+					<div class="ballon creator-ballon">
+						<p class="response">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd asdfgh tresasdoi</p>
+						<a href="">Ver outra resposta</a>
+					</div>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 51 -->
+			<section class="et-page final">
+				<div class="v-center" style="margin-top: -310px">
+					<h3>Respostas da Pesquisa</h3>
+					<p>Veja um montão de dicas rápidas diretamente de quem já fez um projeto de financiamento coletivo</p>
+					<div class="ballon creator-ballon">
+						<p class="response">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd asdfgh tresasdoi</p>
+						<a href="">Ver outra resposta</a>
+					</div>
+				</div>
+
+				<!-- navigation -->
+				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+			</section>
+
+			<!-- 52 -->
+			<section class="et-page final">
+				<div class="v-center" style="margin-top: -310px">
+					<h3 class="indice-title">Índice</h3>
+					<ul class="indice">
+						<li>
+							<a href="#/01"><img src="img/indice/thumb-indice-01.png"></a>
+						</li>
+						<li>
+							<a href="#/02"><img src="img/indice/thumb-indice-02.png"></a>
+						</li>
+						<li>
+							<a href="#/03"><img src="img/indice/thumb-indice-03.png"></a>
+						</li>
+						<li>
+							<a href="#/04"><img src="img/indice/thumb-indice-04.png"></a>
+						</li>
+						<li>
+							<a href="#/05"><img src="img/indice/thumb-indice-05.png"></a>
+						</li>
+						<li>
+							<a href="#/06"><img src="img/indice/thumb-indice-06.png"></a>
+						</li>
+						<li>
+							<a href="#/07"><img src="img/indice/thumb-indice-07.png"></a>
+						</li>
+						<li>
+							<a href="#/08"><img src="img/indice/thumb-indice-08.png"></a>
+						</li>
+						<li>
+							<a href="#/09"><img src="img/indice/thumb-indice-09.png"></a>
+						</li>
+						<li>
+							<a href="#/10"><img src="img/indice/thumb-indice-10.png"></a>
+						</li>
+						<li>
+							<a href="#/11"><img src="img/indice/thumb-indice-11.png"></a>
+						</li>
+						<li>
+							<a href="#/12"><img src="img/indice/thumb-indice-12.png"></a>
+						</li>
+						<li>
+							<a href="#/13"><img src="img/indice/thumb-indice-13.png"></a>
+						</li>
+						<li>
+							<a href="#/14"><img src="img/indice/thumb-indice-14.png"></a>
+						</li>
+						<li>
+							<a href="#/15"><img src="img/indice/thumb-indice-15.png"></a>
+						</li>
+						<li>
+							<a href="#/16"><img src="img/indice/thumb-indice-16.png"></a>
+						</li>
+						<li>
+							<a href="#/17"><img src="img/indice/thumb-indice-17.png"></a>
+						</li>
+						<li>
+							<a href="#/18"><img src="img/indice/thumb-indice-18.png"></a>
+						</li>
+						<li>
+							<a href="#/19"><img src="img/indice/thumb-indice-19.png"></a>
+						</li>
+						<li>
+							<a href="#/20"><img src="img/indice/thumb-indice-20.png"></a>
+						</li>
+						<li>
+							<a href="#/21"><img src="img/indice/thumb-indice-21.png"></a>
+						</li>
+						<li>
+							<a href="#/22"><img src="img/indice/thumb-indice-22.png"></a>
+						</li>
+						<li>
+							<a href="#/23"><img src="img/indice/thumb-indice-23.png"></a>
+						</li>
+						<li>
+							<a href="#/24"><img src="img/indice/thumb-indice-24.png"></a>
+						</li>
+						<li>
+							<a href="#/25"><img src="img/indice/thumb-indice-25.png"></a>
+						</li>
+						<li>
+							<a href="#/26"><img src="img/indice/thumb-indice-26.png"></a>
+						</li>
+						<li>
+							<a href="#/27"><img src="img/indice/thumb-indice-27.png"></a>
+						</li>
+						<li>
+							<a href="#/28"><img src="img/indice/thumb-indice-28.png"></a>
+						</li>
+						<li>
+							<a href="#/29"><img src="img/indice/thumb-indice-29.png"></a>
+						</li>
+						<li>
+							<a href="#/30"><img src="img/indice/thumb-indice-30.png"></a>
+						</li>
+						<li>
+							<a href="#/31"><img src="img/indice/thumb-indice-31.png"></a>
+						</li>
+						<li>
+							<a href="#/32"><img src="img/indice/thumb-indice-32.png"></a>
+						</li>
+						<li>
+							<a href="#/33"><img src="img/indice/thumb-indice-33.png"></a>
+						</li>
+						<li>
+							<a href="#/34"><img src="img/indice/thumb-indice-34.png"></a>
+						</li>
+						<li>
+							<a href="#/35"><img src="img/indice/thumb-indice-35.png"></a>
+						</li>
+						<li>
+							<a href="#/36"><img src="img/indice/thumb-indice-36.png"></a>
+						</li>
+						<li>
+							<a href="#/37"><img src="img/indice/thumb-indice-37.png"></a>
+						</li>
+						<li>
+							<a href="#/38"><img src="img/indice/thumb-indice-38.png"></a>
+						</li>
+						<li>
+							<a href="#/39"><img src="img/indice/thumb-indice-39.png"></a>
+						</li>
+						<li>
+							<a href="#/40"><img src="img/indice/thumb-indice-40.png"></a>
+						</li>
+						<li>
+							<a href="#/41"><img src="img/indice/thumb-indice-41.png"></a>
+						</li>
+						<li>
+							<a href="#/42"><img src="img/indice/thumb-indice-42.png"></a>
+						</li>
+						<li>
+							<a href="#/43"><img src="img/indice/thumb-indice-43.png"></a>
+						</li>
+						<li>
+							<a href="#/44"><img src="img/indice/thumb-indice-44.png"></a>
+						</li>
+						<li>
+							<a href="#/45"><img src="img/indice/thumb-indice-45.png"></a>
+						</li>
+						<li>
+							<a href="#/46"><img src="img/indice/thumb-indice-46.png"></a>
+						</li>
+						<li>
+							<a href="#/47"><img src="img/indice/thumb-indice-47.png"></a>
+						</li>
+						<li>
+							<a href="#/48"><img src="img/indice/thumb-indice-48.png"></a>
+						</li>
+						<li>
+							<a href="#/49"><img src="img/indice/thumb-indice-49.png"></a>
+						</li>
+						<li>
+							<a href="#/50"><img src="img/indice/thumb-indice-50.png"></a>
+						</li>
+						<li>
+							<a href="#/51"><img src="img/indice/thumb-indice-51.png"></a>
+						</li>
+					</ul>
+				</div>
 			</section>
 
 
