--- a/home.html
+++ b/home.html
@@ -1224,7 +1224,7 @@
 			<!-- 47 -->
 			<section class="et-page creator">
 				<div class="v-center" style="margin-top: -197px">
-					<h3 class="icon-quality">Fatores importantes de um projeto: <span class="white-title">Qualidade</span></h3>
+					<h3 class="icon-quality">Fatores importantes de um projeto: <span class="white-title">Qualidade da apresentação</span></h3>
 					<p class="success-data"><strong>66%</strong>dos apoiadores consideram a qualidade do projeto na hora de apoiar</p>
 				</div>
 
@@ -1263,13 +1263,11 @@
 
 			<!-- 50 -->
 			<section class="et-page final">
-				<div class="v-center" style="margin-top: -310px">
-					<h3>Respostas da Pesquisa</h3>
-					<p>Veja um montão de dicas rápidas diretamente de quem já fez um projeto de financiamento coletivo</p>
-					<div class="ballon creator-ballon">
-						<p class="response">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd asdfgh tresasdoi</p>
-						<a href="">Ver outra resposta</a>
-					</div>
+				<div class="v-center" style="margin-top: -224px">
+					<h3>Dados Abertos</h3>
+					<p class="final-text">A pesquisa Retrato do Financiamento Coletivo no Brasil 2013/14 é um primeiro esforço para acharmos cada vez mais respostas para o crowdfunding com jeito Brasileiro. Essa apresentação é uma síntese, um retrato a partir da ótica do Catarse.</p>
+					<p class="final-text">Para essa pesquisa se tornar ainda mais diversa, disponibilizamos os dados abertos para que qualquer um possa extrair mais dicas, observações, sacadas e novos recortes das mais de 3 mil respostas que obtivemos. Acesse os dados abertos da RFCBr em:</p>
+					<a class="green-button" href="#">Google Planilha <small>Dados estatísticos. Ideal para quem quer só observar os dados.</small></a>
 				</div>
 
 				<!-- navigation -->
@@ -1279,18 +1277,47 @@
 
 			<!-- 51 -->
 			<section class="et-page final">
-				<div class="v-center" style="margin-top: -310px">
-					<h3>Respostas da Pesquisa</h3>
-					<p>Veja um montão de dicas rápidas diretamente de quem já fez um projeto de financiamento coletivo</p>
-					<div class="ballon creator-ballon">
-						<p class="response">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd asdfgh tresasdoi</p>
-						<a href="">Ver outra resposta</a>
+				<div class="v-center" style="margin-top: -229px">
+					<h3>Obrigado!</h3>
+					<p class="final-text">Agradecemos demais a sua visita e seu interesse! Acreditamos que todos somos potenciais apoiadores de projetos, basta acharmos aquele que nos sensibiliza do jeito certo.</p>
+
+					<div class="final-box">
+						<p class="icon-mail-green">Assine a nossa news semanal e conheça projetos incríveis!</p>
+
+						<div id="mc_embed_signup">
+							<form action="http://catarse.us5.list-manage.com/subscribe/post?u=ebfcd0d16dbb0001a0bea3639&amp;id=46e8b40265" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+								<div class="mc-field-group">
+									<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Seu email">
+								</div>
+								<div id="mce-responses" class="clear">
+									<div class="response" id="mce-error-response" style="display:none"></div>
+									<div class="response" id="mce-success-response" style="display:none"></div>
+								</div>
+								<div class="clear">
+									<input type="submit" value="Assine" name="subscribe" id="mc-embedded-subscribe" class="button">
+								</div>
+							</form>
+						</div>
+					</div>
+					<hr>
+					<div class="final-box">
+						<p class="icon-share-green">Espalhe a #RFCBr e o financiamento coletivo aos 4 ventos!</p>
+						<ul class="social">
+							<li><a href="#"><img src="img/social/" alt=""></a></li>
+							<li><a href="#"><img src="img/social/" alt=""></a></li>
+							<li><a href="#"><img src="img/social/" alt=""></a></li>
+						</ul>
+					</div>
+					<hr>
+					<div class="final-box">
+						<p class="icon-heart-green">Quer fazer parte dessa história AGORA?</p>
+
+						<a class="back-project" href="http://catarse.me/explore?ref=hotsitepesquisa3anos">Apoie um projeto no Catarse!</a>
 					</div>
 				</div>
 
 				<!-- navigation -->
 				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
-				<a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
 			</section>
 
 			<!-- 52 -->
