--- a/home.html
+++ b/home.html
@@ -576,7 +576,7 @@
 			<section class="et-page financing">
 				<div class="v-center" style="margin-top: -186px">
 					<h3 class="white-title">Onde faltam projetos relevantes?</h3>
-					<p class="projects-missing">Quando perguntados sobre que temas ainda precisam de mais presença no financiamento coletivo, os entrevistados apontaram áreas como <strong>educação</strong>, <strong>mobilidade e transporte</strong>, <strong>meio ambiente</strong>, <strong>negócios sociais</strong> e projetos que trabalhem <strong>valores comunitários</strong>. Veja no próximo slide o cruzamento de dados entre áreas que as pessoas tem interesse em apoiar comparada a e essa percepção de falta de projetos relevantes em determinados segmentos.</p>
+					<p class="projects-missing">Quando perguntados sobre que temas ainda precisam de mais presença no financiamento coletivo, os entrevistados apontaram áreas como <strong>educação</strong>, <strong>mobilidade e transporte</strong>, <strong>meio ambiente</strong>, <strong>negócios sociais</strong> e projetos que trabalhem <strong>valores comunitários</strong>. Veja no próximo slide o cruzamento de dados entre áreas que as pessoas tem interesse em apoiar comparada a essa percepção de falta de projetos relevantes em determinados segmentos.</p>
 				</div>
 
 				<!-- navigation -->
@@ -867,12 +867,12 @@
 
 			<!-- 37 -->
 			<section class="et-page network">
-				<div class="v-center" style="margin-top: -300px">
+				<section class="v-center" style="margin-top: 30px">
 					<h3 class="white-title">na sua opinião...</h3>
 					<p class="disqus-text">Como as grandes empresas podem participar e impulsionar o ecossistema do financiamento coletivo brasileiro?</p>
 
           			<iframe width="770" height="320" border="0" src="//three-years-test.herokuapp.com/disqus_3.html" class='disqus_iframe'></iframe>
-				</div>
+				</section>
 
 				<!-- navigation -->
 				<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
