implemented random responses in slide 36

--- a/home.html
+++ b/home.html
@@ -854,9 +854,9 @@
 				<div class="v-center" style="margin-top: -310px">
 					<h3 class="white-title">Respostas da Pesquisa</h3>
 					<p class="text-ballon">Embora a grande maioria das pessoas tenha sido contra a participação do governo, várias possibilidades de participação interessantes surgiram.</p>
-					<div class="ballon network-ballon">
+					<div id="government" class="ballon network-ballon">
 						<p class="response">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd asdfgh tresasdoi</p>
-						<a href="">Ver outra resposta</a>
+						<a class="change-text" href="#">Ver outra resposta</a>
 					</div>
 				</div>
 
