--- a/home.html
+++ b/home.html
@@ -1250,9 +1250,9 @@
 				<div class="v-center" style="margin-top: -310px">
 					<h3 class="white-title">Respostas da Pesquisa</h3>
 					<p>Veja um montão de dicas rápidas diretamente de quem já fez um projeto de financiamento coletivo</p>
-					<div class="ballon creator-ballon">
+					<div id="advices" class="ballon creator-ballon">
 						<p class="response">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd asdfgh tresasdoi</p>
-						<a href="">Ver outra resposta</a>
+						<a class="change-text" href="#">Ver outra resposta</a>
 					</div>
 				</div>
 
